--- a/TechChallenge.API/appsettings.json
+++ b/TechChallenge.API/appsettings.json
@@ -1,8 +1,9 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=PC-DELL-01,49172\\SQLEXPRESS01;Initial Catalog=techchallengeDb;Integrated Security=False;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;User ID=desenv;Password=desenv;"
+    //"SqlConnection": "Data Source=PC-DELL-01,49172\\SQLEXPRESS01;Initial Catalog=TechChallenge2;Integrated Security=False;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;User ID=desenv;Password=desenv;"
     //"SqlConnection": "Initial Catalog=techchallengeDb; Data Source=localhost,1433;TrustServerCertificate=True;User ID=SA;Password=1q2w3e4r@#$"
     //"SqlConnection": "Server=DESKTOP-FL5KNSI;Database=tech_challenge_01;Trusted_Connection=True;TrustServerCertificate=True;User ID=sa;Password=Abc@1234"
+    "SqlConnection": "Server=localhost,1433;Database=TechChallenge2;User ID=tech.challenge;Password=tech@2024;Trusted_Connection=False; TrustServerCertificate=True;"
   },
   "AllowOrigins": [
     "https://localhost:7292",
