--- a/Devops/prometheus.yml
+++ b/Devops/prometheus.yml
@@ -1,8 +1,8 @@
 global:
   scrape_interval: 15s  # Define o intervalo global de coleta de métricas para 15 segundos
 
-scrape_configs:
+scrape_configs: 
   - job_name: 'techChallenge2'  # Nome do job para identificação
     scrape_interval: 5s  # Intervalo de coleta específico para este job (5 segundos)
     static_configs:
-      - targets: ['host.docker.internal:8080']  # Endpoints a serem monitorados pelo Prometheus
+      - targets: ['webapi:8080']  # Endpoints a serem monitorados pelo Prometheus 
