--- a/.github/workflows/master_techchallenge2.yml
+++ b/.github/workflows/master_techchallenge2.yml
@@ -23,10 +23,10 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build .\TechChallenge.API\TechChallenge.API.csproj --configuration Release
+        run: dotnet build .\TechChallenge.Web\TechChallenge.Web.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish .\TechChallenge.API\TechChallenge.API.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish .\TechChallenge.Web\TechChallenge.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
