--- a/.github/workflows/master_apifronttechchallenge.yml
+++ b/.github/workflows/master_apifronttechchallenge.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - ApiFrontTechChallenge
+name: Build and deploy ApiFrontTechChallenge to Azure Web App
 
 on:
   push:
