--- a/TechChallenge.API/Properties/launchSettings.json
+++ b/TechChallenge.API/Properties/launchSettings.json
@@ -7,8 +7,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5044"
+      "dotnetRunMessages": true
     },
     "https": {
       "commandName": "Project",
@@ -17,8 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7046;http://localhost:5044"
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
