--- a/TechChallenge.API/Properties/launchSettings.json
+++ b/TechChallenge.API/Properties/launchSettings.json
@@ -7,6 +7,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5044"
       "dotnetRunMessages": true
     },
     "https": {
@@ -16,6 +18,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7046;http://localhost:5044"
       "dotnetRunMessages": true
     },
     "IIS Express": {
