--- a/.github/workflows/master_techchallenge.yml
+++ b/.github/workflows/master_techchallenge.yml
@@ -40,7 +40,7 @@ jobs:
           include-prerelease: true
 
       - name: Test API with dotnet
-        run: dotnet test .\TechChallenge.Domain.UnitTest\TechChallenge.Domain.UnitTest.csproj --configuration Release
+        run: dotnet test TechChallenge.Domain.UnitTest\TechChallenge.Domain.UnitTest.csproj --configuration Release
 
   integration-test:
     runs-on: ubuntu-latest
@@ -57,7 +57,7 @@ jobs:
           include-prerelease: true
 
       - name: Test API with dotnet
-        run: dotnet test .\TechChallenge.Domain.IntegrationTest\TechChallenge.Domain.IntegrationTest.csproj --configuration Release
+        run: dotnet test TechChallenge.Domain.IntegrationTest\TechChallenge.Domain.IntegrationTest.csproj --configuration Release
 
   publish-api:
     runs-on: ubuntu-latest
